v5.0.0/_sources/generated/pcdsdevices.energy_monitor.XGMD.rst.txt
pcdsdevices.energy\_monitor.XGMD
================================

.. currentmodule:: pcdsdevices.energy_monitor

.. autoclass:: XGMD

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - not_implemented
          - :class:`~ophyd.signal.SignalRO`
          - 
          - 
          - normal
          - 
    

    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    